# Proiect_SDA_SocialNetwork

./: CMakeLists.txt  main.cpp  readme.txt
Domain/: Friendship.cpp  Friendship.h  Message.cpp  Message.h  User.cpp  User.h
Repository/: RepositoryList.h  RepositoryMessages.h  RepositoryMultiMap.h  ReposytoryFriendship.h
Service/: Service.h
TAD/: List.h  MultiMap.h  Node.h
Tests/: TestsDomain.cpp  TestsDomain.h  TestsRepo.cpp  TestsRepo.h  TestsTAD.cpp  TestsTAD.h
UserInterface/: Interface.cpp  Interface.h
